--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pokedex</title>
+		<link rel="stylesheet" href="src/styles.css">
   </head>
   <body>
     <div id="root"></div>
